--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,6 +93,31 @@ jobs:
       #  with:
       #    local-path: dist/my-project.whl
 
+      - name: Trigger model training notebook from PR branch
+        uses: databricks/run-notebook@v0
+        with:
+          local-notebook-path: notebooks/deployments/MainNotebook
+          # If the current workflow is triggered from a PR,
+          # run notebook code from the PR's head commit, otherwise use github.sha.
+          git-commit: ${{ github.event.pull_request.head.sha || github.sha }}
+          # The cluster JSON below is for Azure Databricks. On AWS and GCP, set
+          # node_type_id to an appropriate node type, e.g. "i3.xlarge" for
+          # AWS or "n1-highmem-4" for GCP
+          new-cluster-json: >
+            {
+              "num_workers": 1,
+              "spark_version": "11.3.x-scala2.12",
+              "node_type_id": "Standard_D3_v2"
+            }
+          # Grant all users view permission on the notebook results
+          access-control-list-json: >
+            [
+              {
+                "group_name": "users",
+                "permission_level": "CAN_VIEW"
+              }
+            ]
+
       - name: Azure CLI script
         uses: azure/cli@v2
         with:
