--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,7 +114,8 @@ jobs:
       - name: Trigger model training notebook from PR branch
         uses: databricks/run-notebook@v0
         with:
-          local-notebook-path: notebooks/MainNotebook.ipynb
+          #local-notebook-path: notebooks/MainNotebook.ipynb
+          local-notebook-path: MyMainNotebook.ipynb
           # If the current workflow is triggered from a PR,
           # run notebook code from the PR's head commit, otherwise use github.sha.
           git-commit: ${{ github.event.pull_request.head.sha || github.sha }}
