--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,13 @@ permissions:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   only-job:
+  
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # timeout assumes that 5 minutes are needed for the cluster to spin up, 30 minutes are needed for the notebook to run, plus 5 minutes slack
+    timeout-minutes: 40
+    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     
