--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -119,8 +119,8 @@ jobs:
       - name: Trigger model training notebook from PR branch
         uses: databricks/run-notebook@v0
         with:
-          local-notebook-path: MyMainNotebook.ipynb
-          #local-notebook-path: find-and-run-notebook.ipynb
+          #local-notebook-path: MyMainNotebook.ipynb
+          local-notebook-path: find-and-run-notebook.ipynb
           
           # If the current workflow is triggered from a PR,
           # run notebook code from the PR's head commit, otherwise use github.sha.
