--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,7 +121,7 @@ jobs:
         with:
           #local-notebook-path: MyMainNotebook.ipynb
           #local-notebook-path: find-and-run-notebook.ipynb
-          local-notebook-path: "4.1 - Real-time Deployment with Model Serving - BCB.ipynb"
+          local-notebook-path: deploy-to-model-serving.ipynb
           
           # If the current workflow is triggered from a PR,
           # run notebook code from the PR's head commit, otherwise use github.sha.
