--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,8 +120,8 @@ jobs:
         uses: databricks/run-notebook@v0
         with:
           #local-notebook-path: MyMainNotebook.ipynb
-          #local-notebook-path: find-and-run-notebook.ipynb
-          local-notebook-path: deploy-to-model-serving.ipynb
+          local-notebook-path: find-and-run-notebook.ipynb
+          #local-notebook-path: deploy-to-model-serving.ipynb
           
           # If the current workflow is triggered from a PR,
           # run notebook code from the PR's head commit, otherwise use github.sha.
