--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,7 +123,8 @@ jobs:
           #local-notebook-path: find-and-run-notebook.ipynb
           #local-notebook-path: deploy-to-model-serving.ipynb
           #workspace-notebook-path: "Workspace/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving.ipynb"
-          workspace-notebook-path: ../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world
+          #workspace-notebook-path: ../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world.ipynb
+          workspace-notebook-path: Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world.ipynb
           
           # If the current workflow is triggered from a PR,
           # run notebook code from the PR's head commit, otherwise use github.sha.
