--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -125,7 +125,8 @@ jobs:
           #workspace-notebook-path: Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world.ipynb
           #workspace-notebook-path: https://adb-2085236908470387.7.azuredatabricks.net/?o=2085236908470387#notebook/3861965376267849/command/3861965376267850
           #workspace-notebook-path: "Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world.ipynb"
-          workspace-notebook-path: "Workspace/Repos/run-notebook-repo/run-notebook/hello-world.ipynb"
+          #workspace-notebook-path: "Workspace/Repos/run-notebook-repo/run-notebook/hello-world.ipynb"
+          workspace-notebook-path: adb-2085236908470387.7.azuredatabricks.net/browse/folders/3861965376268537?o=2085236908470387
           
           # If the current workflow is triggered from a PR,
           # run notebook code from the PR's head commit, otherwise use github.sha.
