--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,13 +120,17 @@ jobs:
         uses: databricks/run-notebook@v0
         with:
         
-          ########## using guidance from github.com/databricks/run-notebook/blob/main/action.yml ##############
+          ########## 
           #local-notebook-path: MyMainNotebook.ipynb
           #local-notebook-path: find-and-run-notebook.ipynb
           #local-notebook-path: hello-world.ipynb
-          workspace-notebook-path: "/Repos/run-notebook-repo/run-notebook/hello-world"
+
+          # using guidance from github.com/databricks/run-notebook/blob/main/action.yml:
+          #workspace-notebook-path: "/Repos/run-notebook-repo/run-notebook/hello-world"
+          # fails with "Only relative paths are currently supported for remote repositories. Paths must not begin with '/'."
+          
           #workspace-notebook-path: "/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving"
-          #workspace-notebook-path: "/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world"
+          workspace-notebook-path: "/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world"
           
           # If the current workflow is triggered from a PR,
           # run notebook code from the PR's head commit, otherwise use github.sha.
