--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -125,13 +125,18 @@ jobs:
           #local-notebook-path: find-and-run-notebook.ipynb
           #local-notebook-path: hello-world.ipynb
 
-          # using guidance from github.com/databricks/run-notebook/blob/main/action.yml:
+          # using guidance from github.com/databricks/run-notebook/blob/main/action.yml ("ABSOLUTE path in the Databricks workspace"):
           #workspace-notebook-path: "/Repos/run-notebook-repo/run-notebook/hello-world"
-          # fails with "Only relative paths are currently supported for remote repositories. Paths must not begin with '/'."
+          # fails with "Only RELATIVE paths are currently supported for remote repositories. Paths must not begin with '/'."
           
+          # again, using guidance from github.com/databricks/run-notebook/blob/main/action.yml ("ABSOLUTE path in the Databricks workspace"):
+          #workspace-notebook-path: "/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world"
+          # agaijn, fails with "Only RELATIVE paths are currently supported for remote repositories. Paths must not begin with '/'."
+
+          workspace-notebook-path: "../realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world"
+
           #workspace-notebook-path: "/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving"
-          workspace-notebook-path: "/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world"
-          
+
           # If the current workflow is triggered from a PR,
           # run notebook code from the PR's head commit, otherwise use github.sha.
           git-commit: ${{ github.event.pull_request.head.sha || github.sha }}
