--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,9 +121,12 @@ jobs:
         with:
         
           ########## 
-          #local-notebook-path: MyMainNotebook.ipynb
-          #local-notebook-path: find-and-run-notebook.ipynb
-          #local-notebook-path: hello-world.ipynb
+          
+          #local-notebook-path: MyMainNotebook.ipynb # basically, it's hello, world
+          
+          #local-notebook-path: hello-world.ipynb # currently includes attempt to query table in UC via SQL
+          
+          local-notebook-path: find-and-run-notebook.ipynb # calls a notebook in github repo that calls a hello-workd notebook in Databricks repo
 
           # using guidance from github.com/databricks/run-notebook/blob/main/action.yml ("ABSOLUTE path in the Databricks workspace"):
           #workspace-notebook-path: "/Repos/run-notebook-repo/run-notebook/hello-world"
@@ -139,7 +142,7 @@ jobs:
           #workspace-notebook-path: "Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world"
           # fails with "'workspace-notebook-path' input must be an ABSOLUTE path"
           
-          workspace-notebook-path: "Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world.ipynb"
+          #workspace-notebook-path: "Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/hello-world.ipynb"
           # fails with "'workspace-notebook-path' input must be an ABSOLUTE path"
 
           #workspace-notebook-path: "/Repos/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving/deploy-from-github-to-model-serving"
