--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,7 +128,9 @@ jobs:
           
           #local-notebook-path: find-and-run-notebook.ipynb # calls a notebook in github repo that calls a hello-workd notebook in Databricks repo
 
-          local-notebook-path: deploy-to-model-serving.ipynb
+          #local-notebook-path: deploy-to-model-serving.ipynb
+
+          local-notebook-path: "/run-notebook/04 - Real-time Deployment/4.1 - Real-time Deployment with Model Serving - BCB.ipynb"
 
           # using guidance from github.com/databricks/run-notebook/blob/main/action.yml ("ABSOLUTE path in the Databricks workspace"):
           #workspace-notebook-path: "/Repos/run-notebook-repo/run-notebook/hello-world"
