--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -172,16 +172,17 @@ jobs:
             {
               "num_workers": 1,
               "spark_version": "11.3.x-scala2.12",
-              "node_type_id": "Standard_D3_v2"
+              "node_type_id": "Standard_D3_v2",
+              "data_security_mode": "SINGLE_USER"
             }
           # Grant all users view permission on the notebook results
-          access-control-list-json: >
-            [
-              {
-                "group_name": "users",
-                "permission_level": "CAN_VIEW"
-              }
-            ]
+          #access-control-list-json: >
+          #  [
+          #    {
+          #      "group_name": "users",
+          #      "permission_level": "CAN_VIEW"
+          #    }
+          #  ]
 
       ## Runs a set of commands using the runners shell
       #- name: Run a multi-line script
