--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -171,7 +171,7 @@ jobs:
           new-cluster-json: >
             {
               "num_workers": 1,
-              "spark_version": "11.3.x-scala2.12",
+              "spark_version": "13.3.x-cpu-ml-scala2.12",
               "node_type_id": "Standard_D3_v2",
               "data_security_mode": "SINGLE_USER"
             }
