--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,15 +93,15 @@ jobs:
         with:
           python-version: 3.8 #install the python version needed
 
-      - name: upgrade databricks-cli # (soon to become 'refresh repo in Databricks')
+      - name: refresh repo in Databricks
         env:
           DATABRICKS_HOST: $(DATABRICKS_HOST)
           DATABRICKS_TOKEN: $(secrets.DATABRICKS_STAGING_TOKEN)
-        run:
-          python -m pip install --upgrade databricks-cli
-        #run: |
+        #run:
         #  python -m pip install --upgrade databricks-cli
-        #  databricks repos update --repo-id REPOID-ENTERED --branch "main"
+        run: |
+          python -m pip install --upgrade databricks-cli
+          databricks repos update --repo-id $(secrets.REPO_ID) --branch "main"
         
       #- name: Build wheel
       #  run:
