--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,9 +99,10 @@ jobs:
           DATABRICKS_TOKEN: $(secrets.DATABRICKS_STAGING_TOKEN)
         #run:
         #  python -m pip install --upgrade databricks-cli
+        #  databricks repos update --repo-id $(secrets.REPO_ID) --branch "main"
         run: |
           python -m pip install --upgrade databricks-cli
-          databricks repos update --repo-id $(secrets.REPO_ID) --branch "main"
+          databricks repos update "/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
         
       #- name: Build wheel
       #  run:
