--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,14 +95,14 @@ jobs:
 
       - name: refresh repo in Databricks
         env:
-          DATABRICKS_HOST: $(DATABRICKS_HOST)
-          DATABRICKS_TOKEN: $(secrets.DATABRICKS_STAGING_TOKEN)
-        #run:
-        #  python -m pip install --upgrade databricks-cli
-        #  databricks repos update --repo-id $(secrets.REPO_ID) --branch "main"
-        run: |
+          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
+        run:
           python -m pip install --upgrade databricks-cli
-          databricks repos update "/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
+          databricks repos update --repo-id $(secrets.REPO_ID) --branch "main"
+        #run: |
+        #  python -m pip install --upgrade databricks-cli
+        #  databricks repos update "/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
         
       #- name: Build wheel
       #  run:
@@ -133,8 +133,8 @@ jobs:
         uses: databricks/run-notebook@v0
         with:
         
-          databricks-host: https://adb-2085236908470387.7.azuredatabricks.net/
-          databricks-token: ${{ secrets.DATABRICKS_STAGING_TOKEN }}
+          databricks-host:  ${{ secrets.DATABRICKS_HOST }}
+          databricks-token: ${{ secrets.DATABRICKS_TOKEN }}
           
           #local-notebook-path: MyMainNotebook.ipynb # basically, it's hello, world
           
