--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,9 +97,9 @@ jobs:
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
-        run:
+        run
           python -m pip install --upgrade databricks-cli
-          databricks repos update --repo-id $(secrets.REPO_ID) --branch "main"
+        #  databricks repos update --repo-id ${{ secrets.REPO_ID }} --branch "main"
         #run: |
         #  python -m pip install --upgrade databricks-cli
         #  databricks repos update "/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
