--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,7 +97,7 @@ jobs:
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
-        run
+        run:
           python -m pip install --upgrade databricks-cli
         #  databricks repos update --repo-id ${{ secrets.REPO_ID }} --branch "main"
         #run: |
