--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,8 +132,10 @@ jobs:
       - name: Trigger model training notebook from PR branch
         uses: databricks/run-notebook@v0
         with:
-          databricks-host: https://adb-2085236908470387.7.azuredatabricks.net/
-          databricks-token: ${{ secrets.DATABRICKS_STAGING_TOKEN }}
+          #databricks-host: https://adb-2085236908470387.7.azuredatabricks.net/
+          #databricks-token: ${{ secrets.DATABRICKS_STAGING_TOKEN }}
+          databricks-host: ${{ secrets.DATABRICKS_HOST }}
+          databricks-token: ${{ secrets.DATABRICKS_TOKEN }}
           
           #local-notebook-path: MyMainNotebook.ipynb # basically, it's hello, world
           
