--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,9 +133,9 @@ jobs:
         uses: databricks/run-notebook@v0
         with:
           #databricks-host: https://adb-2085236908470387.7.azuredatabricks.net/
-          #databricks-token: ${{ secrets.DATABRICKS_STAGING_TOKEN }}
+          databricks-token: ${{ secrets.DATABRICKS_STAGING_TOKEN }}
           databricks-host: ${{ secrets.DATABRICKS_HOST }}
-          databricks-token: ${{ secrets.DATABRICKS_TOKEN }}
+          #databricks-token: ${{ secrets.DATABRICKS_TOKEN }}
           
           #local-notebook-path: MyMainNotebook.ipynb # basically, it's hello, world
           
