--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,7 +99,7 @@ jobs:
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
         run: |
           python -m pip install --upgrade databricks-cli
-          databricks repos update --path "/Workspace/Users/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
+          databricks repos update --path "/Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
         
       #- name: Build wheel
       #  run:
