--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,13 +97,14 @@ jobs:
         env:
           DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
           DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
-        #run: |
-        #  python -m pip install --upgrade databricks-cli
-        #  databricks repos update --path "/Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
-        ###### Error fetching repo ID for /Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook: HTTP code: 401, Credential was not sent or was of an unsupported type for this API.
         run: |
           python -m pip install --upgrade databricks-cli
-          databricks repos update --repo_id ${{ secrets.REPO_ID }} --branch "main"
+          databricks repos update --path "/Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
+        ##### Error fetching repo ID for /Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook: HTTP code: 401, Credential was not sent or was of an unsupported type for this API.
+        #run: |
+        #  python -m pip install --upgrade databricks-cli
+        #  databricks repos update --repo_id ${{ secrets.REPO_ID }} --branch "main"
+        ###### Process completed with exit code 2.
 
       #- name: Build wheel
       #  run:
