--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,18 +94,29 @@ jobs:
           python-version: 3.8 #install the python version needed
 
       - name: refresh repo in Databricks
+      
+        #env:
+        #  DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
+        #  DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
+        #run: |
+        #  python -m pip install --upgrade databricks-cli
+        #  databricks repos update --path "/Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
+        ###### Error fetching repo ID for /Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook: HTTP code: 401, Credential was not sent or was of an unsupported type for this API.
+
+        #env:
+        #  databricks-host: ${{ secrets.DATABRICKS_HOST }}
+        #  databricks-token: ${{ secrets.DATABRICKS_STAGING_TOKEN }}
+        #run: |
+        #  python -m pip install --upgrade databricks-cli
+        #  databricks repos update --path "/Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
+        ###### Error: b'{"error_code":"RESOURCE_DOES_NOT_EXIST","message":"Git folder (Repo) could not be found"}'
+        
         env:
-          #DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-          #DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
           databricks-host: ${{ secrets.DATABRICKS_HOST }}
           databricks-token: ${{ secrets.DATABRICKS_STAGING_TOKEN }}
         run: |
           python -m pip install --upgrade databricks-cli
-          databricks repos update --path "/Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
-        ##### Error fetching repo ID for /Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook: HTTP code: 401, Credential was not sent or was of an unsupported type for this API.
-        #run: |
-        #  python -m pip install --upgrade databricks-cli
-        #  databricks repos update --repo_id ${{ secrets.REPO_ID }} --branch "main"
+          databricks repos update --repo_id ${{ secrets.REPO_ID }} --branch "main"
         ###### Process completed with exit code 2.
 
       #- name: Build wheel
