--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,14 +94,6 @@ jobs:
           python-version: 3.8 #install the python version needed
 
       - name: refresh repo in Databricks
-      
-        #env:
-        #  DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-        #  DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
-        #run: |
-        #  python -m pip install --upgrade databricks-cli
-        #  databricks repos update --path "/Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
-        ###### Error fetching repo ID for /Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook: HTTP code: 401, Credential was not sent or was of an unsupported type for this API.
 
         #env:
         #  databricks-host: ${{ secrets.DATABRICKS_HOST }}
@@ -117,17 +109,7 @@ jobs:
         run: |
           python -m pip install --upgrade databricks-cli
           databricks repos update --repo-id ${{ secrets.REPO_ID }} --branch "main"
-
-      #- name: Build wheel
-      #  run:
-      #    python setup.py bdist_wheel
-      # python: can't open file '/home/runner/work/github-actions/github-actions/setup.py': [Errno 2] No such file or directory
-      
-      #- name: Upload wheel
-      #  uses: databricks/upload-dbfs-temp@v0
-      #  id: upload_wheel
-      #  with:
-      #    local-path: dist/my-project.whl
+        ####### Error: b'{"error_code":"RESOURCE_DOES_NOT_EXIST","message":"Git folder (Repo) could not be found"}'
 
       #- name: Azure CLI script
       #  uses: azure/cli@v2
