--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,13 +103,24 @@ jobs:
         #  databricks repos update --path "/Repos/realadmin@brianchristopherbrownhotmai.onmicrosoft.com/run-notebook" --branch "main"
         ###### Error: b'{"error_code":"RESOURCE_DOES_NOT_EXIST","message":"Git folder (Repo) could not be found"}'
         
+        #env:
+        #  databricks-host: ${{ secrets.DATABRICKS_HOST }}
+        #  databricks-token: ${{ secrets.DATABRICKS_STAGING_TOKEN }}
+        #run: |
+        #  python -m pip install --upgrade databricks-cli
+        #  databricks repos update --repo-id ${{ secrets.REPO_ID }} --branch "main"
+        ######## Error: b'{"error_code":"RESOURCE_DOES_NOT_EXIST","message":"Git folder (Repo) could not be found"}'
+
         env:
-          databricks-host: ${{ secrets.DATABRICKS_HOST }}
-          databricks-token: ${{ secrets.DATABRICKS_STAGING_TOKEN }}
+          DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
+          DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_STAGING_TOKEN }}
         run: |
           python -m pip install --upgrade databricks-cli
           databricks repos update --repo-id ${{ secrets.REPO_ID }} --branch "main"
-        ####### Error: b'{"error_code":"RESOURCE_DOES_NOT_EXIST","message":"Git folder (Repo) could not be found"}'
+
+
+
+
 
       #- name: Azure CLI script
       #  uses: azure/cli@v2
